[tool.poetry]
name = "python-pytest"
version = "0.1.0"
description = ""
authors = ["Petr Stribny <petrstribny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.22"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-sugar = "^0.9.4"
hypothesis = "^5.46.0"
faker = "^5.4.0"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
